--- a/cocacola.html
+++ b/cocacola.html
@@ -21,7 +21,7 @@
         </header>
         <div class="content">
             <div id="para">
-                <h3>UNLOCK!<span>007</span> the  in you</h3>
+                <h3>UNLOCK!<span>007</span>  in you</h3>
                 <h5>Power is in Your Hand, Feel it
 
                     Let’s Chill Out
